/*
 * Copyright 2017 BrutalRape().
 * Licensed under the Apache License, Version 2.0
 */

package rape.brutal.gitstarship;

/**
 * Created by haze on 22.03.2017.
 */
public interface IAttackable {

    void setDamage(int damage);

    int getHitPoints();
}
