/*
 * Copyright 2017 BrutalRape().
 * Licensed under the Apache License, Version 2.0
 */

package rape.brutal.gitstarship;

import rape.brutal.gitstarship.ships.GitStarShip;

/**
 * Created by haze on 22.03.2017.
 */
public interface ILandable {

    void land(GitStarShip gitStarship);
}
