/*
 * Copyright 2017 BrutalRape().
 * Licensed under the Apache License, Version 2.0
 */

package rape.brutal.gitstarship;

/**
 * Created by haze on 24.03.2017.
 */
public interface IValuable extends IStorageable {

    int getCost();
}
