/*
 * Copyright 2017 BrutalRape().
 * Licensed under the Apache License, Version 2.0
 */

package rape.brutal.gitstarship;

/**
 * Created by haze on 22.03.2017.
 */
public class Universe {

    private int kills;
    private int moneySpends;

    public void journeyState() {

    }

    public int getKills() {
        return kills;
    }

    public void setKills(int kills) {
        this.kills = kills;
    }

    public int getMoneySpends() {
        return moneySpends;
    }

    public void setMoneySpends(int moneySpends) {
        this.moneySpends = moneySpends;
    }

    public void winState() {

    }

    public void loseState() {
        System.out.println("Lose test message");
    }

    public void getStats() {

    }
}
