/*
 * Copyright 2017 BrutalRape().
 * Licensed under the Apache License, Version 2.0
 */

package rape.brutal.gitstarship.trade;

/**
 * Created by haze on 22.03.2017.
 */
public class Mechanic extends Trader {
    public boolean repair(int cash, String itemName) {
        return false;
    }

    public boolean upgrade(int cash, String itemName) {
        return false;
    }
}
